# BrowserTermRs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
backend/: Cargo.toml
backend/src/: main.rs  term.rs  terminal_size.rs
frontend/: Cargo.toml
frontend/src/: main.rs  term.rs
shared/src/: lib.rs  term.rs
